--- a/src/assignment_4.Rmd
+++ b/src/assignment_4.Rmd
@@ -25,23 +25,24 @@ snowshoe <- read_csv(here("data", "bonanza_hares.csv"))
 
 ### 1. Overview
 
-This report provides an exploratory overview of differences in penguin sizes for three species of nesting adult penguins (gentoo, chinstrap and Adélie) observed on islands within the Palmer Archipelago from 2007 - 2009 (Gorman et al. 2014). Specifically, flipper lengths are compared across the three species, and the relationship(s) between flipper length and body mass explored. *Note: A 4 - 5 sentence "mini-introduction" to what this study is exploring, including basic background information about the subject, site and study (with citations as needed), and a brief overview of what is included in the exploratory report*
+Snowshoe hares, Lepus americanus, are a 'keystone' prey species in northern boreal forests and experience population fluctuations of 8-11-years. Despite intense responses of both vegetation and predators to changes in hare densities, landscape-scale comparisons of hare populations in Alaska have been limited to qualitative descriptions. This study was unable to detect declines in apparent survival during declining densities in study populations.This report provides an exploratory overview of differences in juvenile snowshoe hare sizes observed in 5 locations in the Tanana valley, Alaska from 1999 to 2012, via capture-recapture method. (Kielland et al. (2017)). Specifically, the relationship(s) between hind foot lengths and body weight were explored.
 
 ### 2. Data and Analyses
 
-Penguin structural size measurements were collected and made available by Dr. Kristen Gorman and colleagues at the Palmer Station Long Term Ecological Research (LTER) network site in Palmer Archipelago, Antarctica (see map from Gorman et al. (2014) in Figure 1). The data contain observations for 344 unique nesting penguins, collected over three seasons (2007, 2008, 2009). Following exploratory data visualization, flipper lengths between male and female penguins are by two-sample t-tests using a significance level ($\alpha$) of 0.05 throughout. Differences between groups are described by Cohen's *d* effect size. The relationship between flipper length and body mass is explored by simple linear regression. All analyses are in R version 4.0.2 using RStudio version 1.3.1056. *Note:A 3 - 4 sentence section in which you briefly describe the data, including citation & credit as needed, and provide an overview of the main analysis, statistical methods and tools used.* 
+Juvenile Snowshoe Hares size and weight measurements were collected and made available by Dr. Kielland Knut at 5 locales in the Tanana valley located within the Bonanza Creek Experimental Forest from 1998 to 2012. The data contain observations for 378 juvenile snowshoe hares, collected from 199-2012, excluding years 2002 and 2009. 
+Following exploratory data visualization, body weight distributions between male and female juvenile hares are explored by site, with summary statistics accompanying visualizations. The relationship between hind foot lengths and body weights are explored by simple linear regression. All analyses are in R version 4.0.2 using RStudio version 1.3.1056. 
 
 ### 3. Exploratory Findings
 
 #### A. Juvenile Snowshoe Hare Trap Counts
 
 ```{r}
-juvenile <- snowshoe %>%
+juvenile <- snowshoe %>% #Filtering data to only display juvenile ages
   filter(age == "j") %>% 
   mutate(date = mdy(date)) %>% #Doesn't like YMD format
   mutate(year = year(date))
 
-juvenile_count <- juvenile %>% 
+juvenile_count <- juvenile %>% #Gathering count summary statistics of juvenile observations.
   count(year) %>% 
   summarize(
     mean_count = mean(n),
@@ -54,13 +55,13 @@ juvenile_count <- juvenile %>%
 **Table 1.** Descriptive statistics (mean, standard deviation, and sample size) of annual juvenile hare trappings per year. Data: Kielland et al. (2017).
 
 ```{r descriptive_stats}
-juvenile_count %>% 
+juvenile_count %>% #Creating table that conveys summary statistics gathered.
   kable(col.names = c("Mean count per year", "Median count per year", "Standard deviation", "Maximum per year", "Minimum per year")) %>% 
   kable_styling(bootstrap_options = "striped", full_width = FALSE)
 ```
 
 ```{r juvenile_count_plot, fig.align = "center"}
-ggplot(data = juvenile, aes(x = year)) +
+ggplot(data = juvenile, aes(x = year)) + #Creating visualization of hare trap counts by year
   geom_histogram(fill = "blue") +
   theme_minimal() +
   labs(x = "Year",
@@ -79,7 +80,7 @@ Table 1 and Figure 2 depict trapping count data from all sites across the years 
 
 ```{r juvenile_weight_graph, fig.align = "center"}
 juvenile %>% 
-  ggplot(aes(x = sex, y = weight)) +
+  ggplot(aes(x = sex, y = weight)) + #Creating graphs to compare weights of juvenile females to males at each grid site.
   geom_beeswarm(aes(color = sex)) +
   facet_wrap("grid") + # Allows you to convey data for more than one observation within a variable
   geom_boxplot(fill = NA, width = 0.2, outlier.color = NA) +
@@ -104,7 +105,7 @@ Figure 3 depicts the differences in weight between sexes at each site location. 
 
 **Table 2.** Comparing juvenile snowshoe hare weights between male and female sexes with summary statistics that include mean, median, and standard deviation of weights across both sexes, as well as sample size. 
 ```{r weight_summary_stats}
-weight_stats <- juvenile %>%
+weight_stats <- juvenile %>% #Creating summary statistics 
   group_by(sex) %>% 
   summarize(mean_weight = round(mean(na.omit(weight)),2), # na.omit takes out N/A observations within a variable
             median_weight = median(na.omit(weight)),
@@ -116,12 +117,7 @@ weight_stats %>%
   kable_styling(bootstrap_options = "striped", full_width = FALSE)
 ```
 
-```{r summary_stats_pt3}
-
-#####put back in include = FALSE
-
-
-
+```{r summary_stats_pt3, include=FALSE}
 #Create female and male stats to perform exploratory graphs and analyses
 snwhares_f <- juvenile %>% 
   filter(sex == "f") %>% 
@@ -155,12 +151,57 @@ diff_means <- abs(weight_stats %>%
   select(mean_weight))
 ```
 
-On average, observed female juvenile snowshoe hare weights (`r weight_stats %>% filter(sex == "f") %>% select(mean_weight) %>%  pull(mean_weight)) are less than that of observed male weights (`r round(male_mean,2)` $\pm$). The difference in means between male and female hares (`r abs(diff_means)`) in (g). Cohen's D effect size is very low (`r hare_cohend$estimate`), and t-test give a p-value of (`r hare_ttest$p.value`). With the given statistics, we can safely reject the null hypothesis and assume male and female weights are significantly different groups. 
+Based on mean weight values in grams, observed female juvenile snowshoe hare weights (`r weight_stats[1,2]`) are less than that of observed male weights (`r weight_stats[2,2]`). The difference in means between male and female hares is as follows, (`r abs(diff_means)`) in (g). Cohen's D effect size is very low (`r snwhare_effsize $estimate`), and a t-test gives a p-value of (`r snwhare_ttest$p.value`). 
 
-On average, adult male gentoo penguins have longer flippers than adult female gentoos (221.54 ± 5.67 and 212.71 ± 3.9 mm, respectively; mean ± 1 standard deviation). While the absolute difference in means is 8.83 mm (a 4.07% difference), the difference in means is significant (Welch’s two-sample t-test: t(106.69) = 9.94, p < 0.001), and the effect size is large (Cohen’s d = 1.81).
+#### D. Relationship Between Juvenile Weight & Hind Foot Length
 
+```{r hindft_weight_summary_stats, fig.align='center'}
+#Linear regression
+hndft_weight_lm  <- lm(weight~hindft, data = juvenile) 
 
+#Get tidy versions of the model output to call later on in text
+hndft_weight_lm_glance <- glance(hndft_weight_lm) 
+hndft_weight_lm_tidy <- tidy(hndft_weight_lm)
 
+# See model diagnostics:
+# plot(hndft_weight_lm)
 
+# Get Pearson's r correlation
+hndft_weight_cor <- cor.test(juvenile$weight, juvenile$hindft)
 
+# Tidy version of correlation output:
+hndft_weight_cor_tidy <- tidy(hndft_weight_cor)
+
+# Graph linear model within a jitter plot
+juvenile %>% 
+  ggplot(aes(x = hindft, y = weight)) +
+  geom_jitter(color = "black") +
+   geom_smooth(method = "lm",
+              color = "red",
+              size = 0.8,
+              fill = "orange",
+              alpha = 0.2) +
+  labs(x = "Hind Foot Length (mm)",
+       y = "Weight (g)",
+       title = "Relationship between Hind Foot Length (mm) to Weight(g)") +
+  theme_minimal() +
+  ggpubr::stat_regline_equation(label.x = 75, label.y = 1200)
+```
+
+**Figure 3.** Relationship between juvenile snowshoe hare hind foot length (mm) and weight (g). Points indicate individual juvenile snowshoe hare measurements. Linear model summary: $\beta$~1~ = `r round(hndft_weight_lm_tidy$estimate[2], 2)` g mm^-1^, p< .001,R^2^ = `r round(hndft_weight_lm_glance$r.squared,2)`, Pearson's *r* = `r round(hndft_weight_cor_tidy$estimate,2)`.
+Data: Kielland et. al. (2017).
+
+The relationship between juvenile snowshoe hare hind foot length (mm) and weight (g) appears relatively linear (Figure 3). Simple linear regression revealed that juvenile snowshoe hare hind foot length does not significantly predict juvenile snowshoe hare body weight. (p < 0.001, R^2^ = `r round(hndft_weight_lm_glance$r.squared,2)`) with an average slope of $\beta$ = `r round(hndft_weight_lm_tidy$estimate[2], 2)` g mm^-1^ (i.e., for each one millimeter increase in hind foot length we expect an average increase in body mass of `r round(hndft_weight_lm_tidy$estimate[2], 2)` g). Hind foot length and body weight are moderately, and significantly, positively correlated (Pearson's *r* = `r round(hndft_weight_cor_tidy$estimate,2)`, p < 0.001). Diagnostic plots (not included) reveal normally distributed and heteroscedastic residuals. 
+
+## Summary
+
+Exploratory data analysis reveals the following initial findings: 
+
+- Female weights vary more significantly with greater distributions of weight than male weights across all three sites.
+- Based on mean weight values in grams, observed juvenile female hare weights are less than that of observed juvenile male weights (the difference is significant, and the effect size is small)
+- Hind foot length appears linearly related with body weight; the relationship (by simple linear regression) is moderate, with a slope (expected average increase in body weight with a 1 mm increase in hind foot length) of `r round(hndft_weight_lm_tidy$estimate[2], 2)` g mm^-1^.
+
+## Citations
+
+Kielland, K., F.S. Chapin, R.W. Ruess, and Bonanza Creek LTER. 2017. Snowshoe hare physical data in Bonanza Creek Experimental Forest: 1999-Present ver 22. Environmental Data Initiative. 
 
